@@ -10,10 +10,11 @@
 	<version>22.04.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+    <name>Goobi workflow: Build jar package</name>
+
     <properties>
-        <sonar.projectBaseDir>../</sonar.projectBaseDir>
-        <sonar.sources>../src/main/java,pom.xml</sonar.sources>
-        <sonar.skip>true</sonar.skip>
+        <skipTests>true</skipTests>
+        <mdep.analyze.skip>true</mdep.analyze.skip>
     </properties>
 
 	<build>
@@ -36,86 +37,15 @@
             </testResource>
 		</testResources> 
 		<plugins>
-
-			<!-- make test script executable  -->
-			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-antrun-plugin</artifactId>
-			    <version>1.6</version>
-			    <executions>
-			        <execution>
-			            <id>process-test-classes</id>
-			            <phase>process-test-classes</phase>
-			            <configuration>
-			                <target>
-			                    <chmod file="target/test-classes/scripts/script_createDirMeta.sh" perm="755"/>
-			                </target>
-			            </configuration>
-			            <goals>
-			                <goal>run</goal>
-			            </goals>
-			        </execution>
-			    </executions>
-			</plugin>
-
-            <plugin>
-              <groupId>org.owasp</groupId>
-              <artifactId>dependency-check-maven</artifactId>
-              <version>7.1.0</version>
-              <configuration>
-              <!--
-                  <failBuildOnCVSS>8.0</failBuildOnCVSS>
-              -->
-              <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
-              <skipProvidedScope>true</skipProvidedScope>
-              <skipTestScope>true</skipTestScope>
-              <suppressionFiles>
-                  <suppressionFile>${project.basedir}/goobi-suppression.xml</suppressionFile>
-                    </suppressionFiles>
-                    <format>ALL</format>
-                    <ossIndexWarnOnlyOnRemoteErrors>true</ossIndexWarnOnlyOnRemoteErrors>
-                    <failOnError>false</failOnError>
-                    <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
-                    
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-              
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
-				<configuration>
+                <configuration>
+                    <compilerArgument>-Xlint:deprecation</compilerArgument>
 					<source>1.8</source>
 					<target>1.8</target>
-
 				</configuration>
-                
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12.4</version>
-                <configuration>
-<!--                           <skipTests>true</skipTests> -->
-                    <excludes>
-                        <exclude>**/de/sub/goobi/TestAll.java</exclude>
-                    </excludes>
-                    <systemProperties>
-                        <property>
-                            <name>java.util.logging.config.file</name>
-                            <value>src/test/resources/log4j2.test.xml</value>
-                        </property>
-                    </systemProperties>                    
-                    <argLine>--add-exports java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
-                </configuration>
-
-            </plugin>
 		</plugins>
 	</build>
 
